Adjusting layout for OpenGL widget

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(config)
 add_subdirectory(handler)
+add_subdirectory(opengl)
 add_subdirectory(windows)
 
 set(QCW_SOURCES
@@ -26,6 +27,7 @@ add_executable(qcw
 target_link_libraries(qcw
         config
         handler
+        opengl
         windows
         Qt5::Core
         Qt5::Widgets
