Added Config Window

--- a/src/windows/CMakeLists.txt
+++ b/src/windows/CMakeLists.txt
@@ -3,6 +3,11 @@ set(QCW_WINDOWS_MAIN
         mainwindow.hpp
         mainwindow.ui)
 
+set(QCW_WINDOWS_CONFIG
+        configwindow.cpp
+        configwindow.hpp
+        configwindow.ui)
+
 find_package(Qt5 REQUIRED COMPONENTS
         Core
         Widgets
@@ -11,14 +16,15 @@ find_package(Qt5 REQUIRED COMPONENTS
         OpenGL)
 
 add_library(windows
-        ${QCW_WINDOWS_MAIN})
+        ${QCW_WINDOWS_MAIN}
+        ${QCW_WINDOWS_CONFIG})
 
 target_link_libraries(windows
         config
         opengl
         Qt5::Core
-        Qt5::Widgets
         Qt5::Gui
+        Qt5::Widgets
         Qt5::SerialPort
         Qt5::OpenGL)
 
