Moving widgets in subfolder of windows cmake module and adding Status bar widgets

--- a/src/windows/CMakeLists.txt
+++ b/src/windows/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(QCW_WINDOWS_WIDGET_SOURCES
-        widget/glwidget.cpp)
+        widgets/glwidget.cpp
+        widgets/statusbar.cpp)
 
 set(QCW_WINDOWS_WIDGET_HEADERS
-        widget/glwidget.hpp)
+        widgets/glwidget.hpp
+        widgets/statusbar.hpp)
 
 set(QCW_WINDOWS_MAIN
         mainwindow.cpp
