Adding support for sending commands to Arduino

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(config)
 add_subdirectory(handler)
+add_subdirectory(morsecodec)
 add_subdirectory(windows)
 
 set(QCW_SOURCES
@@ -27,6 +28,7 @@ add_executable(qcw WIN32
 target_link_libraries(qcw
         config
         handler
+        morsecodec
         windows
         Qt5::Core
         Qt5::Gui
