Variable speed for encoder

--- a/src/windows/CMakeLists.txt
+++ b/src/windows/CMakeLists.txt
@@ -37,6 +37,7 @@ add_library(windows
 
 target_link_libraries(windows
         config
+        morsecodec
         Qt5::Core
         Qt5::Gui
         Qt5::Widgets
