--- a/src/qcw.rc
+++ b/src/qcw.rc
@@ -1,4 +1,4 @@
-IDI_ICON1 ICON DISCARDABLE "../icons/icon-256.ico"
-IDI_ICON2 ICON DISCARDABLE "../icons/icon-48.ico"
-IDI_ICON3 ICON DISCARDABLE "../icons/icon-32.ico"
-IDI_ICON4 ICON DISCARDABLE "../icons/icon-16.ico"
+IDI_ICON1 ICON DISCARDABLE "../icons/windows/icon-256.ico"
+IDI_ICON2 ICON DISCARDABLE "../icons/windows/icon-48.ico"
+IDI_ICON3 ICON DISCARDABLE "../icons/windows/icon-32.ico"
+IDI_ICON4 ICON DISCARDABLE "../icons/windows/icon-16.ico"
